shalinee | beta-stage| PO align, input border issue fixed

--- a/apps/web-giddh/src/app/shared/header/components/account-update-new-details/account-update-new-details.component.scss
+++ b/apps/web-giddh/src/app/shared/header/components/account-update-new-details/account-update-new-details.component.scss
@@ -68,7 +68,11 @@ span.dr-label {
             border-left: 1px solid $very-light-gray !important;
         }
         input{
+            border-left: 1px solid $very-light-gray !important;
             border-right: none !important;
+            &:focus{
+                border-left: 1px solid $chetwode-blue !important;
+            }
         }
     }
 }
